// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScheduleDirection /> can render green line 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction"
  >
    <div
      class="m-schedule-direction__direction"
      id="direction-name"
    >
      Eastbound
    </div>
    <div
      class="js-m-schedule-click-boundary"
    >
      <div
        class="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable notranslate"
        role="button"
        tabindex="0"
      >
         
        <span
          aria-hidden="true"
          class="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
        >
          SVG
        </span>
      </div>
    </div>
    <button
      class="m-schedule-direction__button btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="notranslate m-schedule-direction__icon"
      >
        SVG
      </span>
      Change Direction
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ScheduleDirection /> not allow changing direction when no route patterns 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction"
  >
    <div
      class="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <div
      class="js-m-schedule-click-boundary"
    >
      <div
        class="m-schedule-direction__route-pattern notranslate"
      >
        Pattern 2 
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ScheduleDirection /> renders a CR component 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction"
  >
    <div
      class="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <div
      class="js-m-schedule-click-boundary"
    >
      <div
        class="m-schedule-direction__route-pattern notranslate"
      >
        End
      </div>
    </div>
    <button
      class="m-schedule-direction__button btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="notranslate m-schedule-direction__icon"
      >
        SVG
      </span>
      Change Direction
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ScheduleDirection /> renders a bus component 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction"
  >
    <div
      class="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <div
      class="js-m-schedule-click-boundary"
    >
      <div
        class="m-schedule-direction__route-pattern notranslate"
      >
        Pattern 2 
      </div>
    </div>
    <button
      class="m-schedule-direction__button btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="notranslate m-schedule-direction__icon"
      >
        SVG
      </span>
      Change Direction
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ScheduleDirection /> renders a subway component 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction"
  >
    <div
      class="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <div
      class="js-m-schedule-click-boundary"
    >
      <div
        class="m-schedule-direction__route-pattern notranslate"
      >
        End
      </div>
    </div>
    <button
      class="m-schedule-direction__button btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="notranslate m-schedule-direction__icon"
      >
        SVG
      </span>
      Change Direction
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ScheduleDirection /> renders with a static map 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction"
  >
    <div
      class="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <div
      class="js-m-schedule-click-boundary"
    >
      <div
        class="m-schedule-direction__route-pattern notranslate"
      >
        End
      </div>
    </div>
    <button
      class="m-schedule-direction__button btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="notranslate m-schedule-direction__icon"
      >
        SVG
      </span>
      Change Direction
    </button>
  </div>
  <img
    alt="route 1 route map"
    class="img-fluid"
    src="http://example.com/map.png"
  />
  <a
    href="http://example.com/map.pdf"
    rel="noopener noreferrer"
    target="_blank"
  >
    <i
      aria-hidden="true"
      class="fa fa-search-plus"
    />
    View map as a PDF
  </a>
</DocumentFragment>
`;

exports[`<ScheduleDirection /> respects the initially selected pattern ID, if specified 1`] = `
<DocumentFragment>
  <div
    class="m-schedule-direction"
  >
    <div
      class="m-schedule-direction__direction"
      id="direction-name"
    >
      Outbound
    </div>
    <div
      class="js-m-schedule-click-boundary"
    >
      <div
        class="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable notranslate"
        role="button"
        tabindex="0"
      >
        Pattern 3 
        <span
          aria-hidden="true"
          class="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
        >
          SVG
        </span>
      </div>
    </div>
    <button
      class="m-schedule-direction__button btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="notranslate m-schedule-direction__icon"
      >
        SVG
      </span>
      Change Direction
    </button>
  </div>
</DocumentFragment>
`;
